[package]
name = "test-controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"
kube = { version = "0.88.1",  features = ["runtime", "derive"]  }
k8s-openapi = { version = "0.21.0", features = ["latest"] }
thiserror = "1.0.56"
futures-util = "0.3.30"
serde = { version = "1.0.196", features = ["derive"] }
schemars = "0.8.16"
serde_json = "1.0.113"
log = "0.4.20"
